--- a/app/themes/tute/pages/home.htm
+++ b/app/themes/tute/pages/home.htm
@@ -1,6 +1,6 @@
 title = "Demonstration"
-url = "/"
-layout = "default"
+url = "/home"
+layout = "tute"
 ==
 <div class="jumbotron">
     <div class="container">
