--- a/app/themes/tute/pages/appointment.htm
+++ b/app/themes/tute/pages/appointment.htm
@@ -1,9 +1,10 @@
 title = "实验预约"
-url = "/appointment"
+url = "/appointment/:page?"
 layout = "tute"
-description = "实现预约"
+description = "实验预约列表页"
 is_hidden = 0
 
 [index]
+maxItems = 3
 ==
 {% component 'index' %}
