--- a/app/themes/tute/pages/appointment.htm
+++ b/app/themes/tute/pages/appointment.htm
@@ -4,7 +4,7 @@ layout = "tute"
 description = "实验预约列表页"
 is_hidden = 0
 
-[index]
+[appointmentIndex]
 maxItems = 10
 ==
-{% component 'index' %}
+{% component 'appointmentIndex' %}
