--- a/app/themes/tute/pages/appointment/add.htm
+++ b/app/themes/tute/pages/appointment/add.htm
@@ -3,6 +3,6 @@ url = "/appointment/add"
 layout = "tute"
 is_hidden = 0
 
-[add]
+[appointmentAdd]
 ==
-{% component 'add' %}
+{% component 'appointmentAdd' %}
