--- a/app/themes/tute/pages/video.htm
+++ b/app/themes/tute/pages/video.htm
@@ -30,30 +30,11 @@ is_hidden = 0
                 <li>
                     <div class="row">
                         <div class="col-md-4">
-                            <video poster="{{ 'assets/images/video.jpg'|theme }}"
+                            <video poster="{{ 'assets/images/test1.png'|theme }}"
                                    class="js-player"
                                    playsinline
                                    controls>
-                                <source src="{{ 'assets/images/test.mp4'|theme }}" type="video/mp4"/>
-                            </video>
-                        </div>
-                        <div class="col-md-8">
-                            <h4>课程标题
-                                <small>主讲教师</small>
-                            </h4>
-                            <p>
-                                课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介</p>
-                        </div>
-                    </div>
-                </li>
-                <li>
-                    <div class="row">
-                        <div class="col-md-4">
-                            <video poster="{{ 'assets/images/video.jpg'|theme }}"
-                                   class="js-player"
-                                   playsinline
-                                   controls>
-                                <source src="{{ 'assets/images/test.mp4'|theme }}" type="video/mp4"/>
+                                <source src="{{ 'assets/images/test1.mp4'|theme }}" type="video/mp4"/>
                             </video>
                         </div>
                         <div class="col-md-8">
