--- a/app/themes/tute/pages/video.htm
+++ b/app/themes/tute/pages/video.htm
@@ -46,6 +46,25 @@ is_hidden = 0
                         </div>
                     </div>
                 </li>
+                <li>
+                    <div class="row">
+                        <div class="col-md-4">
+                            <video poster="{{ 'assets/images/test2.jpg'|theme }}"
+                                   class="js-player"
+                                   playsinline
+                                   controls>
+                                <source src="{{ 'assets/images/test2.mp4'|theme }}" type="video/mp4"/>
+                            </video>
+                        </div>
+                        <div class="col-md-8">
+                            <h4>课程标题
+                                <small>主讲教师</small>
+                            </h4>
+                            <p>
+                                课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介</p>
+                        </div>
+                    </div>
+                </li>
             </ul>
         </div>
     </div>
