--- a/app/themes/tute/pages/video.htm
+++ b/app/themes/tute/pages/video.htm
@@ -11,38 +11,20 @@ is_hidden = 0
                 <li>
                     <div class="row">
                         <div class="col-md-4">
-                            <video poster="{{ 'assets/images/video.jpg'|theme }}"
+                            <video poster="{{ 'assets/images/test2.jpg'|theme }}"
                                    class="js-player"
                                    playsinline
                                    controls>
-                                <source src="{{ 'assets/images/test.mp4'|theme }}" type="video/mp4"/>
+                                <source src="{{ 'assets/data/video/caojie/1.mp4'|theme }}" type="video/mp4"/>
                             </video>
                         </div>
                         <div class="col-md-8">
-                            <h4>课程标题
-                                <small>主讲教师</small>
+                            <h4>管理技能开发与设计1
+                                <small>曹洁</small>
                             </h4>
                             <p>
-                                课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介</p>
-                        </div>
-                    </div>
-                </li>
-                <li>
-                    <div class="row">
-                        <div class="col-md-4">
-                            <video poster="{{ 'assets/images/test1.png'|theme }}"
-                                   class="js-player"
-                                   playsinline
-                                   controls>
-                                <source src="{{ 'assets/images/test1.mp4'|theme }}" type="video/mp4"/>
-                            </video>
-                        </div>
-                        <div class="col-md-8">
-                            <h4>课程标题
-                                <small>主讲教师</small>
-                            </h4>
-                            <p>
-                                课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介</p>
+                                通过对职业域中遇到的问题、现象或工作挑战进行分析；利用管理相关知识、理论或实践为参考，提出解决问题的方案；并开发为职业域中的关键行动并模式化，从而扩大胜任域。
+                            </p>
                         </div>
                     </div>
                 </li>
@@ -53,15 +35,76 @@ is_hidden = 0
                                    class="js-player"
                                    playsinline
                                    controls>
-                                <source src="{{ 'assets/images/test2.mp4'|theme }}" type="video/mp4"/>
+                                <source src="{{ 'assets/data/video/caojie/2.mp4'|theme }}" type="video/mp4"/>
                             </video>
                         </div>
                         <div class="col-md-8">
-                            <h4>课程标题
-                                <small>主讲教师</small>
+                            <h4>管理技能开发与设计2
+                                <small>曹洁</small>
                             </h4>
                             <p>
-                                课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介课程简介</p>
+                                通过对职业域中遇到的问题、现象或工作挑战进行分析；利用管理相关知识、理论或实践为参考，提出解决问题的方案；并开发为职业域中的关键行动并模式化，从而扩大胜任域。
+                            </p>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="row">
+                        <div class="col-md-4">
+                            <video poster="{{ 'assets/images/test2.jpg'|theme }}"
+                                   class="js-player"
+                                   playsinline
+                                   controls>
+                                <source src="{{ 'assets/data/video/caojie/3.mp4'|theme }}" type="video/mp4"/>
+                            </video>
+                        </div>
+                        <div class="col-md-8">
+                            <h4>管理技能开发与设计3
+                                <small>曹洁</small>
+                            </h4>
+                            <p>
+                                通过对职业域中遇到的问题、现象或工作挑战进行分析；利用管理相关知识、理论或实践为参考，提出解决问题的方案；并开发为职业域中的关键行动并模式化，从而扩大胜任域。
+                            </p>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="row">
+                        <div class="col-md-4">
+                            <video poster="{{ 'assets/images/test2.jpg'|theme }}"
+                                   class="js-player"
+                                   playsinline
+                                   controls>
+                                <source src="{{ 'assets/data/video/chenxue/1.mp4'|theme }}" type="video/mp4"/>
+                            </video>
+                        </div>
+                        <div class="col-md-8">
+                            <h4>国际物流管理课程设计1
+                                <small>陈雪</small>
+                            </h4>
+                            <p>
+
+                            </p>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="row">
+                        <div class="col-md-4">
+                            <video poster="{{ 'assets/images/test2.jpg'|theme }}"
+                                   class="js-player"
+                                   playsinline
+                                   controls>
+                                <source src="{{ 'assets/data/video/chenxue/2.mp4'|theme }}" type="video/mp4"/>
+                            </video>
+                        </div>
+                        <div class="col-md-8">
+                            <h4>国际物流管理课程设计2
+                                <small>陈雪</small>
+                            </h4>
+                            <p>
+
+                            </p>
                         </div>
                     </div>
                 </li>
