更改封面及MP4位置

--- a/app/themes/tute/pages/video.htm
+++ b/app/themes/tute/pages/video.htm
@@ -11,11 +11,11 @@ is_hidden = 0
                 <li>
                     <div class="row">
                         <div class="col-md-4">
-                            <video poster="{{ 'assets/caojie/cover.jpeg'|theme }}"
+                            <video poster="{{ 'assets/data/video/caojie/cover.jpeg'|theme }}"
                                    class="js-player"
                                    playsinline
                                    controls>
-                                <source src="{{ 'assets/caojie/1.mp4'|theme }}" type="video/mp4"/>
+                                <source src="{{ 'assets/data/video/caojie/1.mp4'|theme }}" type="video/mp4"/>
                             </video>
                         </div>
                         <div class="col-md-8">
@@ -31,7 +31,7 @@ is_hidden = 0
                 <li>
                     <div class="row">
                         <div class="col-md-4">
-                            <video poster="{{ 'assets/caojie/cover.jpeg'|theme }}"
+                            <video poster="{{ 'assets/data/video/caojie/cover.jpeg'|theme }}"
                                    class="js-player"
                                    playsinline
                                    controls>
@@ -71,7 +71,7 @@ is_hidden = 0
                 <li>
                     <div class="row">
                         <div class="col-md-4">
-                            <video poster="{{ 'assets/caojie/cover.jpeg'|theme }}"
+                            <video poster="{{ 'assets/data/video/caojie/cover.jpeg'|theme }}"
                                    class="js-player"
                                    playsinline
                                    controls>
