更改封面及MP4位置

--- a/app/themes/tute/pages/video.htm
+++ b/app/themes/tute/pages/video.htm
@@ -51,26 +51,6 @@ is_hidden = 0
                 <li>
                     <div class="row">
                         <div class="col-md-4">
-                            <video poster="{{ 'assets/images/test2.jpg'|theme }}"
-                                   class="js-player"
-                                   playsinline
-                                   controls>
-                                <source src="{{ 'assets/data/video/caojie/1/2.mp4'|theme }}" type="video/mp4"/>
-                            </video>
-                        </div>
-                        <div class="col-md-8">
-                            <h4>管理技能开发与设计2
-                                <small>曹洁</small>
-                            </h4>
-                            <p>
-                                通过对职业域中遇到的问题、现象或工作挑战进行分析；利用管理相关知识、理论或实践为参考，提出解决问题的方案；并开发为职业域中的关键行动并模式化，从而扩大胜任域。
-                            </p>
-                        </div>
-                    </div>
-                </li>
-                <li>
-                    <div class="row">
-                        <div class="col-md-4">
                             <video poster="{{ 'assets/data/video/caojie/cover.jpeg'|theme }}"
                                    class="js-player"
                                    playsinline
@@ -91,7 +71,7 @@ is_hidden = 0
                 <li>
                     <div class="row">
                         <div class="col-md-4">
-                            <video poster="{{ 'assets/images/test2.jpg'|theme }}"
+                            <video poster="{{ 'assets/data/video/chenxue/cover.jpg'|theme }}"
                                    class="js-player"
                                    playsinline
                                    controls>
@@ -111,7 +91,7 @@ is_hidden = 0
                 <li>
                     <div class="row">
                         <div class="col-md-4">
-                            <video poster="{{ 'assets/images/test2.jpg'|theme }}"
+                            <video poster="{{ 'assets/data/video/chenxue/cover.jpg'|theme }}"
                                    class="js-player"
                                    playsinline
                                    controls>
