--- a/app/themes/tute/pages/video.htm
+++ b/app/themes/tute/pages/video.htm
@@ -83,7 +83,7 @@ is_hidden = 0
                                 <small>陈雪</small>
                             </h4>
                             <p>
-
+                                本课程为经管学院课程设计类实践课程，通过本课程的学习，使学生加强对国际物流管理业务流程的认知，对国际物流各环节中产生的不同类别的单据的制作的掌握，提高对结算手续以及通关步骤的感性认识，力求通过实际动手操作，使学生更好地掌握国际物流管理运作过程中的重点环节的注意事项，增加学生的在从事国际物流业务中的单据操作能力。
                             </p>
                         </div>
                     </div>
@@ -103,7 +103,67 @@ is_hidden = 0
                                 <small>陈雪</small>
                             </h4>
                             <p>
-
+                                本课程为经管学院课程设计类实践课程，通过本课程的学习，使学生加强对国际物流管理业务流程的认知，对国际物流各环节中产生的不同类别的单据的制作的掌握，提高对结算手续以及通关步骤的感性认识，力求通过实际动手操作，使学生更好地掌握国际物流管理运作过程中的重点环节的注意事项，增加学生的在从事国际物流业务中的单据操作能力。
+                            </p>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="row">
+                        <div class="col-md-4">
+                            <video poster="{{ 'assets/data/video/cuixiaodi/cover.jpg'|theme }}"
+                                   class="js-player"
+                                   playsinline
+                                   controls>
+                                <source src="{{ 'assets/data/video/cuixiaodi/1.mp4'|theme }}" type="video/mp4"/>
+                            </video>
+                        </div>
+                        <div class="col-md-8">
+                            <h4>第三方物流课程设计
+                                <small>崔晓迪</small>
+                            </h4>
+                            <p>
+                                教学目标：从总体上对第三方物流项目的招标活动提供基本认识，使学生学习之后对第三方物流项目招标工作和招标书的撰写有一个总体了解，并能够加以具体应用。
+                            </p>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="row">
+                        <div class="col-md-4">
+                            <video poster="{{ 'assets/data/video/cuixiaodi/cover.jpg'|theme }}"
+                                   class="js-player"
+                                   playsinline
+                                   controls>
+                                <source src="{{ 'assets/data/video/cuixiaodi/2.mp4'|theme }}" type="video/mp4"/>
+                            </video>
+                        </div>
+                        <div class="col-md-8">
+                            <h4>第三方物流课程设计
+                                <small>崔晓迪</small>
+                            </h4>
+                            <p>
+                                教学目标：从总体上对第三方物流项目的招标活动提供基本认识，使学生学习之后对第三方物流项目招标工作和招标书的撰写有一个总体了解，并能够加以具体应用。
+                            </p>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="row">
+                        <div class="col-md-4">
+                            <video poster="{{ 'assets/data/video/cuixiaodi/cover.jpg'|theme }}"
+                                   class="js-player"
+                                   playsinline
+                                   controls>
+                                <source src="{{ 'assets/data/video/cuixiaodi/3.mp4'|theme }}" type="video/mp4"/>
+                            </video>
+                        </div>
+                        <div class="col-md-8">
+                            <h4>第三方物流课程设计
+                                <small>崔晓迪</small>
+                            </h4>
+                            <p>
+                                教学目标：从总体上对第三方物流项目的招标活动提供基本认识，使学生学习之后对第三方物流项目招标工作和招标书的撰写有一个总体了解，并能够加以具体应用。
                             </p>
                         </div>
                     </div>
